--- a/work/test_pytorch_with_cuda.ipynb
+++ b/work/test_pytorch_with_cuda.ipynb
@@ -2,12 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0de5c649-31a5-4b29-9494-2c70449b918d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "import logging\n",
+    "import warnings\n",
+    "from argparse import ArgumentParser, Namespace\n",
+    "\n",
+    "from pytorch_lightning import Trainer, seed_everything\n",
+    "\n",
+    "from anomalib.config import get_configurable_parameters\n",
+    "from anomalib.data import get_datamodule\n",
+    "from anomalib.data.utils import TestSplitMode\n",
+    "from anomalib.models import get_model\n",
+    "from anomalib.utils.callbacks import LoadModelCallback, get_callbacks\n",
+    "from anomalib.utils.loggers import configure_logger, get_experiment_logger"
    ]
   },
   {
